--- a/indexxx.html
+++ b/indexxx.html
@@ -70,7 +70,7 @@
 
 <div class="azure"><b><Center>UGLY STUDIOS</Center></b></div>
 
-<Center><h2 class="blue-text"> <a href="www.instagram.com"> instagram</a><BR>
+<Center><h2 class="blue-text"> <a href="https://www.instagram.com"> instagram</a><BR>
     <a href="www.instagram.com">twitter</a> <BR>
     <a href="www.instagram.com">    twitch </a><BR>
     <a href="www.instagram.com">donate</a><BR>
