--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 
 
-<html>
+<HTML>
     
     
     <style>
@@ -126,5 +126,5 @@ canvas {
         <!--img src="https://img.ohpolly.com/pQhFyOm6hP3g8pCB7eSeDeH3IpQ=/fit-in/1800x/catalog/product/3/3/3313_3_waste-no-shine-black-halter-top-thongs-heart-charm-bikini-set_1.jpg"></-->
 	
 
-</body></html>
+</body></HTML>
 
