--- a/indexxx.html
+++ b/indexxx.html
@@ -70,10 +70,10 @@
 
 <div class="azure"><b><Center>UGLY STUDIOS</Center></b></div>
 
-<Center><h2 class="blue-text"> <a href="https://www.instagram.com"> instagram</a><BR>
-    <a href="www.instagram.com">twitter</a> <BR>
-    <a href="www.instagram.com">    twitch </a><BR>
-    <a href="www.instagram.com">donate</a><BR>
+<Center><h2 class="blue-text"> <a href="https://www.instagram.com" target="_blank"> instagram</a><BR>
+    <a href="https://www.twitter.com" target="_blank"> >twitter</a> <BR>
+    <a href="https://www.twitch.com" target="_blank">     twitch </a><BR>
+    <a href="https://www.instagram.com" target="_blank"> donate</a><BR>
     </center>
     
     
