--- a/indexxx.html
+++ b/indexxx.html
@@ -29,7 +29,7 @@
     .azure
     {        color: white;
 }
-    a:link {
+    a:link a:visited {
         
     color: lightyellow;
         text-decoration: none;
@@ -71,7 +71,7 @@
 <div class="azure"><b><Center>UGLY STUDIOS</Center></b></div>
 
 <Center><h2 class="blue-text"> <a href="https://www.instagram.com" target="_blank"> instagram</a><BR>
-    <a href="https://www.twitter.com" target="_blank"> >twitter</a> <BR>
+    <a href="https://www.twitter.com" target="_blank"> twitter</a> <BR>
     <a href="https://www.twitch.com" target="_blank">     twitch </a><BR>
     <a href="https://www.instagram.com" target="_blank"> donate</a><BR>
     </center>
