--- a/indexxx.html
+++ b/indexxx.html
@@ -40,7 +40,7 @@
      a:visited  {
           color: lightyellow;
         text-decoration: none;
-
+text-decoration-line: none;
         
     }
     
