--- a/indexxx.html
+++ b/indexxx.html
@@ -82,6 +82,7 @@ text-decoration-line: none;
         color: black;
         background-color: azure;
         padding: px;
+        border-radius: 30px;
     }
     
     button:hover {
